# routes/api.php
@@ -16,7 +16,7 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::middleware('auth:api')->group(function () {
-    Route::resource('/characters', CharacterController::class)->only('index', 'show');
+    Route::resource('/characters', CharacterController::class);
 });
 
 Route::post('/login', LoginController::class)->name('login');
